[modify] modify target branch
only when master branch is changed, travis will works.

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,9 @@ notifications:
     on_success: change
     on_failue: always
   slack: nishida-lab:z78v1yQRiOylt3CTGNuY9PUf
+branches:
+  only:
+  - master
 
 # Configuration variables. All variables are global now, but this can be used to
 # trigger a build matrix for different ROS distributions if desired.
