--- a/fr01_description/CMakeLists.txt
+++ b/fr01_description/CMakeLists.txt
@@ -1,3 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(fr01_description)
 find_package(catkin REQUIRED)
+
+find_package(roslaunch)
+roslaunch_add_file_check(test/fr01_launch_test.xml)
