[add] add launch test files for gazebo

--- a/fr01_gazebo/package.xml
+++ b/fr01_gazebo/package.xml
@@ -13,5 +13,6 @@
   <run_depend>gazebo_ros_control</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>forest_robot_control</run_depend>
+  <run_depend>fr01_control</run_depend>
 
 </package>
