[fix] fix dependencies
add xacro dependence

--- a/fr01_gazebo/package.xml
+++ b/fr01_gazebo/package.xml
@@ -12,6 +12,7 @@
   <run_depend>ros_control</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
   <run_depend>gazebo_ros</run_depend>
+  <run_depend>xacro</run_depend>
   <run_depend>fr01_control</run_depend>
 
 </package>
