--- a/fr01_description/package.xml
+++ b/fr01_description/package.xml
@@ -13,4 +13,5 @@
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rviz</run_depend>
+  <run_depend>xacro</run_depend>
 </package>
