--- a/fr01_driver/CMakeLists.txt
+++ b/fr01_driver/CMakeLists.txt
@@ -195,3 +195,6 @@ target_link_libraries(fr01_controller_node
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+find_package(roslaunch)
+roslaunch_add_file_check(test/fr01_driver_test.xml)
