--- a/fr01_sensors/package.xml
+++ b/fr01_sensors/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="yuta@todo.todo">yuta</maintainer>
+  <maintainer email="k104009y@mail.kyutech.jp">AriYu</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -40,7 +40,7 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-
+  <run_depend>hokuyo3d</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
