--- a/fr01_driver/package.xml
+++ b/fr01_driver/package.xml
@@ -45,11 +45,18 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_filters</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>transmission_interface</build_depend>
+  <build_depend>controller_manager</build_depend>
+
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_filters</run_depend>
+  <run_depend>hardware_interface</run_depend>
+  <run_depend>transmission_interface</run_depend>
+  <run_depend>controller_manager</run_depend>
   <run_depend>rosserial_python</run_depend>
   <run_depend>b3m_servo</run_depend>
   <run_depend>ros_ixis_imcs01_driver_beta</run_depend>
