[WIP] change structure of ros_control

--- a/fr01_driver/CMakeLists.txt
+++ b/fr01_driver/CMakeLists.txt
@@ -45,12 +45,18 @@ include_directories(
 
 add_executable(fr01_control
   src/fr01_control.cpp
+  src/fr01_interface/fr01_interface.cpp
   src/fr01_interface/fr01_wheel_interface.cpp
   src/fr01_interface/fr01_steer_interface.cpp)
 
-add_executable(fr01_driver_node src/fr01_driver_node.cpp src/fr01_driver.cpp src/Fr01Interface/Fr01Interface.cpp)
+add_executable(fr01_driver_node
+  src/fr01_driver_node.cpp
+  src/fr01_driver.cpp
+  src/Fr01Interface/Fr01Interface.cpp)
 
-add_executable(fr01_controller_node src/fr01_controller_node.cpp src/fr01_controller.cpp )
+add_executable(fr01_controller_node
+  src/fr01_controller_node.cpp
+  src/fr01_controller.cpp )
 
 target_link_libraries(fr01_driver_node
   ${catkin_LIBRARIES}
