modified base_frame_id and enabled odom tf

--- a/fr01_control/config/fr01_controllers.yaml
+++ b/fr01_control/config/fr01_controllers.yaml
@@ -38,9 +38,9 @@ fr01_diff_drive_controller:
     wheel_separation_multiplier: 1.0
     wheel_radius_multiplier    : 1.0
     cmd_vel_timeout: 20
-    base_frame_id: base_link
+    base_frame_id: base_footprint
 
-    enable_odom_tf: false
+    enable_odom_tf: true
     wheel_separation : 0.6
 
     linear:
