moved some files involved with ros_control to fr01_hw from fr01_driver
see issue #18

--- a/fr01_hw/CMakeLists.txt
+++ b/fr01_hw/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(fr01_driver)
+project(fr01_hw)
 #set(CMAKE_BUILD_TYPE Debug)
 
 ## Find catkin macros and libraries
@@ -44,23 +44,38 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-
-add_executable(fr01_driver_node
-  src/fr01_driver_node.cpp
-  src/fr01_driver.cpp
-  src/Fr01Interface/Fr01Interface.cpp
+add_executable(fr01_control
+  src/fr01_control.cpp
+  src/fr01_interface/fr01_interface.cpp
+  src/fr01_interface/fr01_wheel_interface.cpp
+  src/fr01_interface/fr01_steer_interface.cpp
   )
-add_executable(fr01_controller_node src/fr01_controller_node.cpp src/fr01_controller.cpp )
 
-target_link_libraries(fr01_driver_node
+add_executable(fr01_wheel_controller_node
+  src/fr01_wheel_controller.cpp
+  src/fr01_wheel_controller_node.cpp
+  )
+
+
+add_executable(fr01_wheel_state_publisher_node
+  src/ixis_imcs01/serial.cpp
+  src/ixis_imcs01/ixis_imcs01.cpp
+  src/fr01_wheel_state_publisher.cpp
+  src/fr01_wheel_state_publisher_node.cpp
+  )
+
+target_link_libraries(fr01_wheel_controller_node
   ${catkin_LIBRARIES}
   )
-target_link_libraries(fr01_controller_node
+target_link_libraries(fr01_control
   ${catkin_LIBRARIES}
-)
+  )
+target_link_libraries(fr01_wheel_state_publisher_node
+  ${catkin_LIBRARIES}
+  )
+
 #############
 ## Testing ##
 #############
 
 find_package(roslaunch)
-roslaunch_add_file_check(test/fr01_driver_test.xml)
