add fr01_bringup and fr01_hw's launch

--- a/fr01_hw/CMakeLists.txt
+++ b/fr01_hw/CMakeLists.txt
@@ -79,3 +79,4 @@ target_link_libraries(fr01_wheel_state_publisher_node
 #############
 
 find_package(roslaunch)
+roslaunch_add_file_check(test/fr01_hw_test.xml)
