--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Session.vim
 /fr01_driver/include/ixis_imcs01/imcs01_driver/driver/.urbtc.mod.o.cmd
 /fr01_driver/include/ixis_imcs01/imcs01_driver/driver/.urbtc.ko.cmd
 /fr01_driver/include/ixis_imcs01/imcs01_driver/driver/.tmp_versions/
+/fr01_ndt_mapping/*.pcd
