--- a/fr01_ndt_mapping/package.xml
+++ b/fr01_ndt_mapping/package.xml
@@ -40,7 +40,7 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-
+  <build_depend>pcl_ros</build_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
